--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "ace-builds": "^1.24.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
