--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-terminal-ui": "^1.0.5",
     "tailwindcss": "3.3.3",
-    "terminal-in-react": "^4.3.1",
     "typescript": "5.1.6"
   }
 }
